--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "enzyme": "^2.7.0",
+    "enzyme-to-json": "^1.4.5",
+    "react-addons-test-utils": "^15.4.2",
     "react-scripts": "0.8.4"
   },
   "dependencies": {
+    "axios": "^0.15.3",
+    "parse-link-header": "^0.4.1",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-test-renderer": "^15.4.2"
+    "react-dom": "^15.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
