--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "axios": "^0.15.3",
     "parse-link-header": "^0.4.1",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-addons-create-fragment": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-paginate": "^4.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
