--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^15.4.2",
     "react-addons-create-fragment": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-paginate": "^4.1.0"
+    "react-paginate": "^4.1.0",
+    "react-router": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
