--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react-addons-create-fragment": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-paginate": "^4.1.0",
-    "react-router": "^3.0.0"
+    "react-redux": "^5.0.1",
+    "react-router": "^3.0.0",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
