--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^15.4.2",
     "react-addons-create-fragment": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-markdown": "^2.4.2",
     "react-paginate": "^4.1.0",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
