--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-paginate": "^4.1.0",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
+    "react-router-scroll": "^0.4.1",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0"
   },
